--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
