--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -84,7 +84,8 @@
     "react/prop-types": "off",
     "react/require-default-props": "off",
     "react/jsx-no-constructed-context-values": "off",
-    "no-param-reassign": "off"
+    "no-param-reassign": "off",
+    "react/jsx-props-no-spreading": "off",
   },
   "settings": {
     "import/resolver": {
