--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -85,7 +85,7 @@
     "react/require-default-props": "off",
     "react/jsx-no-constructed-context-values": "off",
     "no-param-reassign": "off",
-    "react/jsx-props-no-spreading": "off",
+    "react/jsx-props-no-spreading": "off"
   },
   "settings": {
     "import/resolver": {
