refactor: :recycle: Refatorando useEffect do useAuth e da páginad e login, e refatorando o refreshToken

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -85,7 +85,9 @@
     "react/require-default-props": "off",
     "react/jsx-no-constructed-context-values": "off",
     "no-param-reassign": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "consistent-return": "off",
+    "no-promise-executor-return": "off"
   },
   "settings": {
     "import/resolver": {
