--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -66,7 +66,7 @@
       }
     ],
     "import/no-extraneous-dependencies": [
-      "error",
+      "off",
       {
         "devDependencies": ["**/*.spec.js"]
       }
